tests/baselines/reference/jsxGenericTest05.errors.txt
tests/cases/conformance/jsxGeneric/file.tsx(4,12): error TS20013: No JSX intrinsic factory defined.
tests/cases/conformance/jsxGeneric/file.tsx(5,17): error TS20013: No JSX intrinsic factory defined.


==== tests/cases/conformance/jsxGeneric/file.tsx (2 errors) ====
    /* @jsx-mode generic */
    
    function test() {
        return <div class="test">
               ~~~~~~~~~~~~~~~~~~
!!! error TS20013: No JSX intrinsic factory defined.
                    <span/>
                    ~~~~~~~
!!! error TS20013: No JSX intrinsic factory defined.
               </div>;
    }